partial implementation of Path migration