@@ -27,7 +27,9 @@ import htsjdk.HtsjdkTest;
 import org.testng.Assert;
 import org.testng.annotations.Test;
 
-import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
@@ -82,10 +84,10 @@ public class SAMTextWriterTest extends HtsjdkTest {
 
     private void doTest(final SAMRecordSetBuilder recordSetBuilder, final SamFlagField samFlagField) throws Exception {
         SamReader inputSAM = recordSetBuilder.getSamReader();
-        final File samFile = File.createTempFile("tmp.", ".sam");
-        samFile.deleteOnExit();
+        final Path samFile = Files.createTempFile("tmp.", ".sam");
+        samFile.toFile().deleteOnExit();
         final Map<String, Object> tagMap = new HashMap<String, Object>();
-        tagMap.put("XC", new Character('q'));
+        tagMap.put("XC", Character.valueOf('q'));
         tagMap.put("XI", 12345);
         tagMap.put("XF", 1.2345f);
         tagMap.put("XS", "Hi,Mom!");
